[filterBar/editor] Set require-keys to true

--- a/desktop/src/ui/public/filter_bar/filter_bar.html
+++ b/desktop/src/ui/public/filter_bar/filter_bar.html
@@ -42,7 +42,7 @@
     <form role="form" name="editFilterForm" ng-submit="editDone()">
       <div
         json-input
-        require-keys=false
+        require-keys="true"
         ui-ace="{
           mode: 'json',
           onLoad: aceLoaded
