--- a/desktop/src/ui/public/filter_bar/filter_bar.html
+++ b/desktop/src/ui/public/filter_bar/filter_bar.html
@@ -41,6 +41,15 @@
 
   <div class="filter-edit-container" ng-if="editingFilter">
     <form role="form" name="editFilterForm" ng-submit="editDone()">
+      <div class="form-group filter-edit-alias">
+        <label>Filter Alias
+          <small>(optional)</small>
+        </label>
+        <input
+          ng-model="editingFilter.alias"
+          type="text"
+          class="form-control">
+      </div>
       <div
         json-input
         require-keys=false
