Added exportTitle to visualize directive and consumers

--- a/desktop/src/plugins/kibana/public/visualize/editor/editor.html
+++ b/desktop/src/plugins/kibana/public/visualize/editor/editor.html
@@ -138,7 +138,12 @@
         </div>
       </div>
 
-      <visualize vis="vis" editable-vis="editableVis"  search-source="savedVis.searchSource"></visualize>
+      <visualize
+        vis="vis"
+        editable-vis="editableVis"
+        export-title="{{savedVis.title}}"
+        search-source="savedVis.searchSource">
+      </visualize>
     </div>
   </div>
 
