--- a/desktop/src/plugins/kibana/public/discover/index.html
+++ b/desktop/src/plugins/kibana/public/discover/index.html
@@ -176,7 +176,12 @@
 
               </header>
 
-              <visualize ng-if="vis && rows.length != 0" vis="vis" es-resp="mergedEsResp" search-source="searchSource"></visualize>
+              <visualize
+                ng-if="vis && rows.length != 0" vis="vis"
+                es-resp="mergedEsResp"
+                export-title="{{opts.savedSearch.title}}"
+                search-source="searchSource">
+              </visualize>
             </div>
 
             <div class="discover-table" fixed-scroll>
