--- a/desktop/src/plugins/table_vis/public/table_vis.html
+++ b/desktop/src/plugins/table_vis/public/table_vis.html
@@ -5,6 +5,10 @@
   </div>
 
   <div ng-if="tableGroups" class="table-vis-container">
-    <kbn-agg-table-group group="tableGroups" per-page="vis.params.perPage"></kbn-agg-table-group>
+    <kbn-agg-table-group
+      group="tableGroups"
+      export-title="{{exportTitle}}"
+      per-page="vis.params.perPage">
+    </kbn-agg-table-group>
   </div>
 </div>
