--- a/desktop/src/ui/public/visualize/visualize.html
+++ b/desktop/src/ui/public/visualize/visualize.html
@@ -1,4 +1,5 @@
-<div ng-if="vis.type.requiresSearch && esResp.hits.total === 0"
+<div
+  ng-if="vis.type.requiresSearch && esResp.hits.total === 0"
   class="text-center visualize-error visualize-chart">
   <div class="item top"></div>
   <div class="item">
@@ -7,9 +8,11 @@
   </div>
   <div class="item bottom"></div>
 </div>
-<div ng-hide="vis.type.requiresSearch && esResp.hits.total === 0"
+<div
+  ng-hide="vis.type.requiresSearch && esResp.hits.total === 0"
   ng-style="loadingStyle"
   ng-class="{ loading: vis.type.requiresSearch && searchSource.activeFetchCount > 0 }"
-  class="visualize-chart"></div>
+  class="visualize-chart">
+</div>
 <!-- <pre>{{chartData | json}}</pre> -->
 <visualize-spy ng-if="vis.type.requiresSearch && showSpyPanel"></visualize-spy>
