[csv export filename] Reworked to use vis.title instead of exportTitle

--- a/desktop/src/plugins/kibana/public/discover/index.html
+++ b/desktop/src/plugins/kibana/public/discover/index.html
@@ -177,9 +177,9 @@
               </header>
 
               <visualize
-                ng-if="vis && rows.length != 0" vis="vis"
+                ng-if="vis && rows.length != 0"
+                vis="vis"
                 es-resp="mergedEsResp"
-                export-title="{{opts.savedSearch.title}}"
                 search-source="searchSource">
               </visualize>
             </div>
