--- a/desktop/src/plugins/table_vis/public/table_vis.html
+++ b/desktop/src/plugins/table_vis/public/table_vis.html
@@ -7,7 +7,7 @@
   <div ng-if="tableGroups" class="table-vis-container">
     <kbn-agg-table-group
       group="tableGroups"
-      export-title="{{exportTitle}}"
+      export-title="vis.title"
       per-page="vis.params.perPage">
     </kbn-agg-table-group>
   </div>
