--- a/desktop/src/ui/public/agg_table/agg_table_group.html
+++ b/desktop/src/ui/public/agg_table/agg_table_group.html
@@ -13,7 +13,7 @@
         <kbn-agg-table
           ng-if="table.rows"
           table="table"
-          export-title="{{exportTitle}}"
+          export-title="exportTitle"
           per-page="perPage">
         </kbn-agg-table>
       </td>
@@ -36,7 +36,7 @@
         <kbn-agg-table
           ng-if="table.rows"
           table="table"
-          export-title="{{exportTitle}}"
+          export-title="exportTitle"
           per-page="perPage">
         </kbn-agg-table>
       </td>
