--- a/desktop/src/plugins/spyModes/public/tableSpyMode.html
+++ b/desktop/src/plugins/spyModes/public/tableSpyMode.html
@@ -1,5 +1,5 @@
 <kbn-agg-table
   table="table"
-  export-title="{{exportTitle}}"
+  export-title="vis.title"
   per-page="editableVis.params.spyPerPage">
 </kbn-agg-table>
