--- a/public/index.html
+++ b/public/index.html
@@ -113,12 +113,12 @@
       <div class="timelion-container-sheet-margin"
         sv-root sv-part="state.sheet"
         sv-on-sort="drop($item, $partFrom, $partTo, $indexFrom, $indexTo)">
-        <div class="chart-container col-md-{{(12 / state.columns)}}" sv-element
+        <div class="chart-container" sv-element
           ng-repeat="cell in state.sheet track by $index"
           ng-click="setActiveCell($index)"
           ng-class="{active: $index === state.selected}"
           >
-          <div chart="sheet[$index]" cell="$index" search="search"></div>
+          <div chart="sheet[$index]" cell="$index" search="search" rows="state.rows" columns="state.columns"></div>
           <div class="cell-actions">
             <div class="cell-id" ng-click="removeCell($index)" tooltip="Remove" tooltip-append-to-body="1"><span>{{$index + 1}}</span></div>
             <div class="cell-move" tooltip="Drag to reorder" tooltip-append-to-body="1" sv-handle><span class="fa fa-arrows"></span></div>
