--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
       <div class="timelion-container-sheet-margin"
         sv-root sv-part="state.sheet"
         sv-on-sort="drop($item, $partFrom, $partTo, $indexFrom, $indexTo)">
-        <div class="chart-container col-md-{{state.columns}} col-sm-12 col-xs-12" sv-element
+        <div class="chart-container col-md-{{12 / state.columns}} col-sm-12 col-xs-12" sv-element
           timelion-grid timelion-grid-rows="state.rows"
           ng-repeat="cell in state.sheet track by $index"
           ng-click="setActiveCell($index)"
