Add the conf.name as the data-test-subj to the table rows of the advanced settings.  This allows functional UI automation to find the row and child form fields (not used by any automation yet).

--- a/desktop/src/plugins/kibana/public/settings/sections/advanced/advanced_row.html
+++ b/desktop/src/plugins/kibana/public/settings/sections/advanced/advanced_row.html
@@ -1,4 +1,4 @@
-<tr ng-class="conf.value === undefined ? 'default' : 'custom'">
+<tr ng-class="conf.value === undefined ? 'default' : 'custom'" data-test-subj="advancedSetting {{conf.name}}" >
   <td class="name">
     <b>{{conf.name}}</b>
     <span class="smaller" ng-show="!conf.isCustom && conf.value !== undefined">
